--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,6 @@
 # See: https://help.github.com/en/articles/about-code-owners
 
-* @ursinn @gmcbm/developer
+* @ursinn
 
 /core/ @ursinn @gmcbm/developer-core 
 
