--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,20 @@ language: java
 jdk:
   - openjdk8
 
-script:
-  - cd core
-  - mvn clean verify
-  - cd ../spigot
-  - mvn clean verify
-  - cd ../bungeecord
-  - mvn clean verify
-  
+jobs:
+  include:
+    - stage: "Build Core"
+      script:
+        - cd core
+        - mvn clean verify
+    - stage: "Build Plugins"
+      script:
+        - cd spigot
+        - mvn clean verify
+      script:
+        - cd bungeecord
+        - mvn clean verify
+
 cache:
   directories:
     - $HOME/.m2
