--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ jobs:
       script:
         - cd spigot
         - mvn clean verify
-      script:
-        - cd bungeecord
-        - mvn clean verify
+#      script:
+#        - cd bungeecord
+#        - mvn clean verify
 
 cache:
   directories:
