--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -77,5 +77,12 @@
             <version>3.0.2</version>
             <scope>provided</scope>
         </dependency>
+        <!-- GMCBM Core -->
+        <dependency>
+            <groupId>net.gmcbm</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
