--- a/bungeecord/pom.xml
+++ b/bungeecord/pom.xml
@@ -63,6 +63,7 @@
     </repositories>
 
     <dependencies>
+        <!-- Bungeecord -->
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
