--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 
     <scm>
         <connection>scm:git:git://github.com/gmcbm/gmcbm.git</connection>
-        <developerConnection>scm:git:https://github.com:gmcbm/gmcbm.git</developerConnection>
+        <developerConnection>scm:git:git://github.com/gmcbm/gmcbm.git</developerConnection>
         <url>https://github.com/gmcbm/gmcbm</url>
     </scm>
 
