--- a/bungeecord/pom.xml
+++ b/bungeecord/pom.xml
@@ -48,6 +48,37 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <!-- Bungeecord -->
+        <!--        <repository>-->
+        <!--            <id>spigotmc-repo</id>-->
+        <!--            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>-->
+        <!--        </repository>-->
+        <!-- Mirror -->
+        <repository>
+            <id>gmcbm-repo</id>
+            <url>https://repo.gmcbm.net/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <!-- Bungeecord -->
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-api</artifactId>
+        </dependency>
+        <!-- Annotation -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
+        <!-- GMCBM Core -->
+        <dependency>
+            <groupId>net.gmcbm</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <!-- Compiler Plugin -->
@@ -77,30 +108,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <!-- Bungeecord -->
-        <repository>
-            <id>spigotmc-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
-
-    <dependencies>
-        <!-- Bungeecord -->
-        <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-api</artifactId>
-        </dependency>
-        <!-- Annotation -->
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-        </dependency>
-        <!-- GMCBM Core -->
-        <dependency>
-            <groupId>net.gmcbm</groupId>
-            <artifactId>core</artifactId>
-        </dependency>
-    </dependencies>
 </project>
