--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,13 @@
 version: 2
 updates:
   - package-ecosystem: maven
+    directory: "/"
+    schedule:
+      interval: daily
+    target-branch: "develop"
+    assignees:
+      - ursinn
+  - package-ecosystem: maven
     directory: "/core/"
     schedule:
       interval: daily
