--- a/core/pom.xml
+++ b/core/pom.xml
@@ -84,10 +84,10 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
             <!-- Deploy Plugin -->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-deploy-plugin</artifactId>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
             <!-- Release Plugin -->
 <!--            <plugin>-->
 <!--                <groupId>org.apache.maven.plugins</groupId>-->
