--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
         </developer>
     </developers>
 
+    <organization>
+        <name>Global Minecraft Ban Manager</name>
+        <url>https://www.gmcbm.net</url>
+    </organization>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
