--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,20 @@
                 <version>1.8-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
+            <!-- Testing - Junit -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.7.1</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- Testing - Mockito -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>3.7.7</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
