--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: gmcbm
 version: ${project.version}
-main: net.gmcbm.spigot.Main
+main: net.gmcbm.bukkit.Main
 prefix: gmcbm
 authors: [ ursinn ]
 description: ${project.description}
