--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,41 @@
                 <version>3.7.7</version>
                 <scope>test</scope>
             </dependency>
+            <!-- bStats - Bukkit -->
+            <dependency>
+                <groupId>org.bstats</groupId>
+                <artifactId>bstats-bukkit</artifactId>
+                <version>1.7</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- bStats - Bungee -->
+            <dependency>
+                <groupId>org.bstats</groupId>
+                <artifactId>bstats-bungeecord</artifactId>
+                <version>1.7</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- Commands - Core -->
+            <dependency>
+                <groupId>co.aikar</groupId>
+                <artifactId>acf-core</artifactId>
+                <version>0.5.0-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+            <!-- Commands - Bukkit -->
+            <dependency>
+                <groupId>co.aikar</groupId>
+                <artifactId>acf-paper</artifactId>
+                <version>0.5.0-SNAPSHOT</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- Commands - Bungee -->
+            <dependency>
+                <groupId>co.aikar</groupId>
+                <artifactId>acf-bungee</artifactId>
+                <version>0.5.0-SNAPSHOT</version>
+                <scope>compile</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
