--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
         <module>bungee</module>
     </modules>
 
+    <repositories>
+        <repository>
+            <id>gmcbm-repo</id>
+            <url>https://repo.gmcbm.net/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <!-- Annotation -->
@@ -263,7 +270,6 @@
 <!--                        <localCheckout>true</localCheckout>-->
 <!--                        <pushChanges>false</pushChanges>-->
 <!--                        <mavenExecutorId>forked-path</mavenExecutorId>-->
-<!--                        <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>-->
 <!--                    </configuration>-->
 <!--                    <dependencies>-->
 <!--                        <dependency>-->
@@ -272,18 +278,6 @@
 <!--                            <version>1.9.5</version>-->
 <!--                        </dependency>-->
 <!--                    </dependencies>-->
-<!--                </plugin>-->
-                <!-- Nexus Staging Plugin -->
-<!--                <plugin>-->
-<!--                    <groupId>org.sonatype.plugins</groupId>-->
-<!--                    <artifactId>nexus-staging-maven-plugin</artifactId>-->
-<!--                    <version>1.6.7</version>-->
-<!--                    <extensions>true</extensions>-->
-<!--                    <configuration>-->
-<!--                        <serverId>ossrh</serverId>-->
-<!--                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
-<!--                        <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
-<!--                    </configuration>-->
 <!--                </plugin>-->
                 <!-- Jacoco Plugin -->
                 <plugin>
@@ -318,45 +312,5 @@
             <id>gmcbm-repo</id>
             <url>https://repo.gmcbm.net/repository/maven-snapshots/</url>
         </snapshotRepository>
-<!--        <snapshotRepository>-->
-<!--            <id>ossrh</id>-->
-<!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-<!--        </snapshotRepository>-->
-<!--        <repository>-->
-<!--            <id>ossrh</id>-->
-<!--            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/-->
-<!--            </url>-->
-<!--        </repository>-->
     </distributionManagement>
-
-    <profiles>
-        <!-- GPG Signature on release -->
-<!--        <profile>-->
-<!--            <id>release-sign-artifacts</id>-->
-<!--            <activation>-->
-<!--                <property>-->
-<!--                    <name>performRelease</name>-->
-<!--                    <value>true</value>-->
-<!--                </property>-->
-<!--            </activation>-->
-<!--            <build>-->
-<!--                <plugins>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.apache.maven.plugins</groupId>-->
-<!--                        <artifactId>maven-gpg-plugin</artifactId>-->
-<!--                        <version>1.6</version>-->
-<!--                        <executions>-->
-<!--                            <execution>-->
-<!--                                <id>sign-artifacts</id>-->
-<!--                                <phase>verify</phase>-->
-<!--                                <goals>-->
-<!--                                    <goal>sign</goal>-->
-<!--                                </goals>-->
-<!--                            </execution>-->
-<!--                        </executions>-->
-<!--                    </plugin>-->
-<!--                </plugins>-->
-<!--            </build>-->
-<!--        </profile>-->
-    </profiles>
 </project>
