--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,13 @@
                 <version>0.5.0-SNAPSHOT</version>
                 <scope>compile</scope>
             </dependency>
+            <!-- Guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>30.1-jre</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
