--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -70,7 +70,7 @@
         </dependency>
         <!-- Commands - Bungee -->
         <dependency>
-            <groupId>co.aikar</groupId>
+            <groupId>net.gmcbm.dependencies</groupId>
             <artifactId>acf-bungee</artifactId>
         </dependency>
     </dependencies>
@@ -91,17 +91,17 @@
                         <relocation>
                             <pattern>org.bstats</pattern>
                             <!-- Replace this with your package! -->
-                            <shadedPattern>net.gmcbm.bungee.utils</shadedPattern>
+                            <shadedPattern>net.gmcbm.bungee.lib.metrics</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
                             <!-- Replace this with your package! -->
-                            <shadedPattern>net.gmcbm.bungee.acf</shadedPattern>
+                            <shadedPattern>net.gmcbm.bungee.lib.acf</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>co.aikar.locales</pattern>
                             <!-- Replace this with your package! -->
-                            <shadedPattern>net.gmcbm.bungee.locales</shadedPattern>
+                            <shadedPattern>net.gmcbm.bungee.lib.locales</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
