--- a/pom.xml
+++ b/pom.xml
@@ -269,23 +269,18 @@
                     </executions>
                 </plugin>
                 <!-- Release Plugin -->
-<!--                <plugin>-->
-<!--                    <groupId>org.apache.maven.plugins</groupId>-->
-<!--                    <artifactId>maven-release-plugin</artifactId>-->
-<!--                    <version>2.5.3</version>-->
-<!--                    <configuration>-->
-<!--                        <localCheckout>true</localCheckout>-->
-<!--                        <pushChanges>false</pushChanges>-->
-<!--                        <mavenExecutorId>forked-path</mavenExecutorId>-->
-<!--                    </configuration>-->
-<!--                    <dependencies>-->
-<!--                        <dependency>-->
-<!--                            <groupId>org.apache.maven.scm</groupId>-->
-<!--                            <artifactId>maven-scm-provider-gitexe</artifactId>-->
-<!--                            <version>1.9.5</version>-->
-<!--                        </dependency>-->
-<!--                    </dependencies>-->
-<!--                </plugin>-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                    <configuration>
+                        <tagNameFormat>v@{project.version}</tagNameFormat>
+                        <preparationGoals>clean verify</preparationGoals>
+                        <localCheckout>true</localCheckout>
+                        <pushChanges>false</pushChanges>
+                        <mavenExecutorId>forked-path</mavenExecutorId>
+                    </configuration>
+                </plugin>
                 <!-- Jacoco Plugin -->
                 <plugin>
                     <groupId>org.jacoco</groupId>
