--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,7 +32,7 @@
     <parent>
         <groupId>net.gmcbm</groupId>
         <artifactId>gmcbm-parent</artifactId>
-        <version>HEAD-jre-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>core</artifactId>
