--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -142,6 +142,10 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
+            <resource>
+                <directory>../core/src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
         </resources>
     </build>
 </project>
