--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -39,7 +39,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Bukkit</name>
+    <name>GMCBM Bukkit</name>
     <description>Global Minecraft Ban Manager Bukkit Plugin</description>
     <url>https://github.com/gmcbm/gmcbm</url>
 
