--- a/core/pom.xml
+++ b/core/pom.xml
@@ -39,7 +39,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Core</name>
+    <name>GMCBM Core</name>
     <description>Global Minecraft Ban Manager Core</description>
 
     <properties>
