--- a/pom.xml
+++ b/pom.xml
@@ -106,13 +106,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Annotation -->
-            <dependency>
-                <groupId>com.google.code.findbugs</groupId>
-                <artifactId>jsr305</artifactId>
-                <version>3.0.2</version>
-                <scope>provided</scope>
-            </dependency>
             <!-- GMCBM Core -->
             <dependency>
                 <groupId>net.gmcbm</groupId>
@@ -134,19 +127,19 @@
                 <version>1.16-R0.4</version>
                 <scope>provided</scope>
             </dependency>
-            <!-- Testing - Junit -->
+            <!-- Sponge -->
             <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>5.7.1</version>
-                <scope>test</scope>
+                <groupId>org.spongepowered</groupId>
+                <artifactId>spongeapi</artifactId>
+                <version>7.3.0</version>
+                <scope>provided</scope>
             </dependency>
-            <!-- Testing - Mockito -->
+            <!-- Velocity -->
             <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
-                <version>3.8.0</version>
-                <scope>test</scope>
+                <groupId>com.velocitypowered</groupId>
+                <artifactId>velocity-api</artifactId>
+                <version>1.1.0</version>
+                <scope>provided</scope>
             </dependency>
             <!-- bStats - Bukkit -->
             <dependency>
@@ -159,6 +152,20 @@
             <dependency>
                 <groupId>org.bstats</groupId>
                 <artifactId>bstats-bungeecord</artifactId>
+                <version>1.7</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- bStats - Sponge -->
+            <dependency>
+                <groupId>org.bstats</groupId>
+                <artifactId>bstats-sponge</artifactId>
+                <version>1.7</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- bStats - Velocity -->
+            <dependency>
+                <groupId>org.bstats</groupId>
+                <artifactId>bstats-velocity</artifactId>
                 <version>1.7</version>
                 <scope>compile</scope>
             </dependency>
@@ -183,12 +190,47 @@
                 <version>0.5.0</version>
                 <scope>compile</scope>
             </dependency>
+            <!-- Commands - Sponge -->
+            <dependency>
+                <groupId>net.gmcbm.dependencies</groupId>
+                <artifactId>acf-sponge</artifactId>
+                <version>0.5.0</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- Commands - Velocity -->
+            <dependency>
+                <groupId>net.gmcbm.dependencies</groupId>
+                <artifactId>acf-velocity</artifactId>
+                <version>0.5.0</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- Annotation -->
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
+                <version>3.0.2</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- Guava -->
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>30.1-jre</version>
                 <scope>provided</scope>
+            </dependency>
+            <!-- Testing - Junit -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.7.1</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- Testing - Mockito -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>3.7.7</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -274,9 +316,12 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>3.0.0-M1</version>
                     <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
                         <tagNameFormat>v@{project.version}</tagNameFormat>
+                        <scmCommentPrefix xml:space="preserve">[RELEASE] </scmCommentPrefix>
                         <preparationGoals>clean verify</preparationGoals>
-                        <localCheckout>true</localCheckout>
+                        <completionGoals>clean install</completionGoals>
+                        <releaseProfiles>release-sign-artifacts</releaseProfiles>
                         <pushChanges>false</pushChanges>
                         <mavenExecutorId>forked-path</mavenExecutorId>
                     </configuration>
