--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+        <!-- Dependency Versions -->
+        <dependency.bstats.version>2.2.1</dependency.bstats.version>
+        <dependency.commands.version>0.5.0</dependency.commands.version>
     </properties>
 
     <modules>
@@ -145,63 +148,63 @@
             <dependency>
                 <groupId>org.bstats</groupId>
                 <artifactId>bstats-bukkit</artifactId>
-                <version>1.7</version>
+                <version>${dependency.bstats.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- bStats - Bungee -->
             <dependency>
                 <groupId>org.bstats</groupId>
                 <artifactId>bstats-bungeecord</artifactId>
-                <version>1.7</version>
+                <version>${dependency.bstats.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- bStats - Sponge -->
             <dependency>
                 <groupId>org.bstats</groupId>
                 <artifactId>bstats-sponge</artifactId>
-                <version>1.7</version>
+                <version>${dependency.bstats.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- bStats - Velocity -->
             <dependency>
                 <groupId>org.bstats</groupId>
                 <artifactId>bstats-velocity</artifactId>
-                <version>2.2.1</version>
+                <version>${dependency.bstats.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- Commands - Core -->
             <dependency>
                 <groupId>net.gmcbm.dependencies</groupId>
                 <artifactId>acf-core</artifactId>
-                <version>0.5.0</version>
+                <version>${dependency.commands.version}</version>
                 <scope>provided</scope>
             </dependency>
             <!-- Commands - Bukkit -->
             <dependency>
                 <groupId>net.gmcbm.dependencies</groupId>
                 <artifactId>acf-paper</artifactId>
-                <version>0.5.0</version>
+                <version>${dependency.commands.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- Commands - Bungee -->
             <dependency>
                 <groupId>net.gmcbm.dependencies</groupId>
                 <artifactId>acf-bungee</artifactId>
-                <version>0.5.0</version>
+                <version>${dependency.commands.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- Commands - Sponge -->
             <dependency>
                 <groupId>net.gmcbm.dependencies</groupId>
                 <artifactId>acf-sponge</artifactId>
-                <version>0.5.0</version>
+                <version>${dependency.commands.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- Commands - Velocity -->
             <dependency>
                 <groupId>net.gmcbm.dependencies</groupId>
                 <artifactId>acf-velocity</artifactId>
-                <version>0.5.0</version>
+                <version>${dependency.commands.version}</version>
                 <scope>compile</scope>
             </dependency>
             <!-- Annotation - JSR305 -->
@@ -223,6 +226,13 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>30.1-jre</version>
+                <scope>provided</scope>
+            </dependency>
+            <!-- Lombok -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.16</version>
                 <scope>provided</scope>
             </dependency>
             <!-- Testing - Junit -->
